[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sound/bgMusic.mp3" type="AudioStream" id=2]
[ext_resource path="res://Entities/Zombie/Zombie.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/background-1.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]

[node name="Main" type="Node"]
script = ExtResource( 5 )
Zombie = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 1025.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 634, 523 )
stream = ExtResource( 2 )
autoplay = true

[node name="Zombie" parent="." instance=ExtResource( 3 )]
position = Vector2( 632, 401 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 334, 367 )

[node name="Darkness" type="CanvasModulate" parent="."]
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="ZombiePositionBL" type="Position2D" parent="."]
position = Vector2( 210, 1091 )

[node name="ZombiePositionTR" type="Position2D" parent="."]
position = Vector2( 1067, -57 )

[node name="ZombiePositionTL" type="Position2D" parent="."]
position = Vector2( 214, -64 )

[node name="ZombiePositionBR" type="Position2D" parent="."]
position = Vector2( 1083, 1095 )

[node name="ZombieTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ZombieTimer" to="." method="_on_ZombieTimer_timeout"]
